// 编译脚本
buildscript {
    ext {
        springBootVersion = "4.0.5" // Spring Boot Bom版本定义
        springFrameworkVersion = "7.0.6" // Spring Framework Bom版本定义
        druidDBPool = "1.2.28"
        jacksonAnnotations = "2.21"
        oshi = "6.10.0"
        commonsIO = "2.21.0"
        yauaa = "8.1.0"
        commonsLang3 = "3.19.0"
        poiooxml = "4.1.2"
        velocityEngine = "2.3"
        springdoc = "3.0.2"
        kaptcha = "2.3.3"
    }
    // 仓库配置
    repositories {
        mavenLocal()
        maven { url = 'https://maven.aliyun.com/repository/central' }
        maven { url = 'https://maven.aliyun.com/repository/spring' }
        maven { url = 'https://maven.aliyun.com/repository/google' }
        mavenCentral()
        gradlePluginPortal()
    }

    dependencies {
        classpath("io.spring.dependency-management:io.spring.dependency-management.gradle.plugin:1.1.7")
        classpath("org.springframework.boot:org.springframework.boot.gradle.plugin:${springBootVersion}")
    }
}

version = '1.0.0-SNAPSHOT'

// 项目配置
allprojects {
    group = 'com.ruoyi'

    // 仓库配置
    repositories {
        mavenLocal()
        maven { url = 'https://maven.aliyun.com/repository/central' }
        maven { url = 'https://maven.aliyun.com/repository/spring' }
        maven { url = 'https://maven.aliyun.com/repository/google' }
        mavenCentral()
    }
}
subprojects {

    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
            mavenBom "org.springframework:spring-framework-bom:${springFrameworkVersion}"
        }
        dependencies {
            dependency "com.alibaba:druid-spring-boot-4-starter:${druidDBPool}"
            dependency "com.fasterxml.jackson.core:jackson-annotations:${jacksonAnnotations}"
            dependency "com.github.oshi:oshi-core:${oshi}"
            dependency "commons-io:commons-io:${commonsIO}"
            dependency "nl.basjes.parse.useragent:yauaa:${yauaa}"
            dependency "org.apache.commons:commons-lang3:${commonsLang3}"
            dependency "org.apache.poi:poi-ooxml:${poiooxml}"
            dependency "org.apache.velocity:velocity-engine-core:${velocityEngine}"
            dependency "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdoc}"
            dependency "pro.fessional:kaptcha:${kaptcha}"
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.release = 25
        options.encoding = 'UTF-8'
        options.warnings = false
        options.deprecation = true
        options.compilerArgs += ["-parameters", "-Xlint:unchecked", "-Xlint:-serial"]
    }

    tasks.withType(GenerateModuleMetadata).configureEach {
        enabled = false
    }

}
